--- a/app/build.gradle
+++ b/app/build.gradle
@@ -88,5 +88,7 @@ dependencies {
     implementation "androidx.room:room-ktx:2.4.2"
     androidTestImplementation "androidx.room:room-testing:2.4.2"
 
+    implementation 'com.google.android.material:material:1.5.0'
+
 
 }
