--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,18 +55,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    //coroutines
+    // coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
 
-    //retrofit
+    // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
 
-    //dagger
+    // dagger
     implementation 'com.google.dagger:dagger:2.40.4'
     kapt 'com.google.dagger:dagger-compiler:2.40.4'
 
-    //viewModel
+    // viewModel
     var lifecycle_version = "2.5.0-alpha04"
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
 
@@ -82,12 +82,13 @@ dependencies {
     //viewBinding
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
 
-    // Room components
+    // room components
     implementation "androidx.room:room-runtime:2.4.2"
     kapt "androidx.room:room-compiler:2.4.2"
     implementation "androidx.room:room-ktx:2.4.2"
     androidTestImplementation "androidx.room:room-testing:2.4.2"
 
+    // material
     implementation 'com.google.android.material:material:1.5.0'
 
 
