--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,17 +43,22 @@ android {
     buildFeatures {
         viewBinding = true
     }
+
 }
 
 dependencies {
-
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
+    implementation 'com.google.android.material:material:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.0-alpha03'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.0-alpha03'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    implementation 'com.android.support:multidex:1.0.3'
+    testImplementation "com.google.truth:truth:1.1.3"
 
     // coroutines
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0")
@@ -90,6 +95,9 @@ dependencies {
 
     // material
     implementation 'com.google.android.material:material:1.5.0'
+
+    //test
+    testImplementation "io.mockk:mockk:1.9.3"
 
 
 }
